--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-# New Changelog
-Αυτό το έργο είναι πλέον υπό νέα διαχείριση. Το προηγούμενο αρχείο καταγραφής αλλαγών έχει αφαιρεθεί για να αποφευχθούν τυχόν συγκρούσεις.
+package-name (1.0.0) unstable; urgency=medium
 
-## [1.0.0] - 2023-10-01
-### Added
-- Αρχική έκδοση υπό νέα διαχείριση.
+  * Αρχική έκδοση υπό νέα διαχείριση.
+
+ -- Dimitrys <demetresmeliates@gmail.com>  Thu, 06 Mar 2025 22:40:00 +0200
