add uBlock Origin extension, and adjust file paths for UI files, modernization of the code, and other improvements.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-sch-scripts (0.0.1) unstable urgency=low
+sch-scripts (0.0.1) unstable; urgency=low
 
   * Αρχική έκδοση υπό νέα διαχείριση.
 
- -- Dimitrys <demetresmeliates@gmail.com>  Thu, 06 Mar 2025 22:40:00 +0200
+ -- Dimitrys Meliates <demetresmeliates@gmail.com>  Thu, 06 Mar 2025 22:40:00 +0200
