--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sch-scripts (50.00) stable; urgency=low
+
+  * Ξεκινήσαμε την αναπτηξη για Linux Mint Debian Edition.
+
+  -- Hellenic Schools Technical Support Team <devs@ts.sch.gr>  Sun, 20 Feb 2025 21:34:00 +0200
+
 sch-scripts (22.04-1) stable; urgency=low
 
   * Αρχική υποστήριξη Ubuntu 22.04
